<resources>
    <string name="app_name">Inventory Control</string>
    <string name="sign_in_message">We are not recognise You! Please</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Log Out</string>
    <string name="language">Language</string>
    <string name="greeting">Welcome to</string>
    <string name="sign_in">Sign In</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="action">Action :</string>
    <string name="hint_amount">Quantity</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>