<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="14dp"
    android:orientation="vertical"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/tv_sign_in_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textSize="9pt"
        android:textColor="@color/black"
        android:text="@string/sign_in_message" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="12pt"
        android:textColor="@color/red_heart"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="9pt"
            android:layout_marginBottom="3dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:textSize="9pt"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/red_heart"
            android:paddingLeft="14dp"
            android:paddingTop="10dp"
            android:paddingRight="14dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_in"
            android:textSize="9pt" />
    </LinearLayout>
</LinearLayout>